Project 003 Custom Profile CapSense RGB LED/PSoC/CapSenseRGB/CapSenseRGB.cydsn/CortexM0/ARM_GCC_493/Debug/BUILD.log
<<<<<<< HEAD
--------------- Build Started: 09/25/2015 15:57:23 Project: CapSenseRGB, Configuration: ARM GCC 4.9-2015-q1-update Debug ---------------
cydsfit.exe -.appdatapath "C:\Users\danielpi\AppData\Local\Cypress Semiconductor\PSoC Creator\3.3" -.fdsnotice -.fdswarpdepfile=warp_dependencies.txt -.fdselabdepfile=elab_dependencies.txt -.fdsbldfile=generated_files.txt -p "Y:\repos\PSoC-4-BLE-Experiments\Project 003 Custom Profile CapSense RGB LED\PSoC\CapSenseRGB\CapSenseRGB.cydsn\CapSenseRGB.cyprj" -d CY8C4247LQI-BL483 -s "Y:\repos\PSoC-4-BLE-Experiments\Project 003 Custom Profile CapSense RGB LED\PSoC\CapSenseRGB\CapSenseRGB.cydsn\Generated_Source\PSoC4" -- -yv2 -q10 -ygs -o2 -v3 -.fftcfgtype=LE
Elaborating Design...
HDL Generation ...
Synthesis ...
Place and Route ...
Tech mapping ...
Analog Placement ...
Analog Routing ...
Analog Code Generation ...
Digital Placement ...
Digital Routing ...
Bitstream Generation ...
Static timing analysis ...
API Generation ...
Dependency Generation ...
Clean Temporary Files ...
arm-none-eabi-gcc.exe -mcpu=cortex-m0 -mthumb -Wno-main -I. -IGenerated_Source\PSoC4 -Wa,-alh=.\CortexM0\ARM_GCC_493\Debug/main.lst -g -D DEBUG -Wall -ffunction-sections -Og -ffat-lto-objects -c .\main.c -o .\CortexM0\ARM_GCC_493\Debug\main.o
.\main.c: In function 'UpdateRGBled':
.\main.c:18:1: error: parameter 'deviceConnected' is initialized
 uint8 deviceConnected = FALSE;
 ^
.\main.c:29:1: error: expected '=', ',', ';', 'asm' or '__attribute__' before 'int'
 int main()
 ^
.\main.c:42:25: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
 void initializeSystem() {
                         ^
.\main.c:74:61: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
 void bluetoothEventHandler(uint32 event, void * eventParam) {
                                                             ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
.\main.c:108:25: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
 void UpdateRGBled(void) {
                         ^
In file included from .\main.c:13:0:
./main.h:15:6: error: old-style parameter declarations in prototyped function definition
 void UpdateRGBled(void)
      ^
.\main.c:132:1: error: expected '{' at end of input
 }
 ^
--------------- Build Failed: 09/25/2015 15:57:35 ---------------
=======
--------------- Build Started: 09/23/2015 14:00:07 Project: CapSenseRGB, Configuration: ARM GCC 4.9-2015-q1-update Debug ---------------
The code generation step is up to date.
arm-none-eabi-gcc.exe -mcpu=cortex-m0 -mthumb -Wno-main -I. -IGenerated_Source\PSoC4 -Wa,-alh=.\CortexM0\ARM_GCC_493\Debug/main.lst -g -D DEBUG -Wall -ffunction-sections -Og -ffat-lto-objects -c .\main.c -o .\CortexM0\ARM_GCC_493\Debug\main.o
arm-none-eabi-ar.exe -rs .\CortexM0\ARM_GCC_493\Debug\CapSenseRGB.a .\CortexM0\ARM_GCC_493\Debug\cyfitter_cfg.o .\CortexM0\ARM_GCC_493\Debug\PRS_CLK.o .\CortexM0\ARM_GCC_493\Debug\RED.o .\CortexM0\ARM_GCC_493\Debug\GREEN.o .\CortexM0\ARM_GCC_493\Debug\BLUE.o .\CortexM0\ARM_GCC_493\Debug\CyBootAsmGnu.o .\CortexM0\ARM_GCC_493\Debug\CyFlash.o .\CortexM0\ARM_GCC_493\Debug\CyLib.o .\CortexM0\ARM_GCC_493\Debug\cyPm.o .\CortexM0\ARM_GCC_493\Debug\cyutils.o .\CortexM0\ARM_GCC_493\Debug\CyLFClk.o .\CortexM0\ARM_GCC_493\Debug\BLE.o .\CortexM0\ARM_GCC_493\Debug\BLE_gatt.o .\CortexM0\ARM_GCC_493\Debug\BLE_eventHandler.o .\CortexM0\ARM_GCC_493\Debug\BLE_HAL_INT.o .\CortexM0\ARM_GCC_493\Debug\BLE_HAL_PVT.o .\CortexM0\ARM_GCC_493\Debug\BLE_custom.o .\CortexM0\ARM_GCC_493\Debug\RedGreenPrISM.o .\CortexM0\ARM_GCC_493\Debug\RedGreenPrISM_PM.o .\CortexM0\ARM_GCC_493\Debug\BluePrISM.o .\CortexM0\ARM_GCC_493\Debug\BluePrISM_PM.o .\CortexM0\ARM_GCC_493\Debug\Slider.o .\CortexM0\ARM_GCC_493\Debug\Slider_PM.o .\CortexM0\ARM_GCC_493\Debug\Slider_CSHL.o .\CortexM0\ARM_GCC_493\Debug\Slider_INT.o .\CortexM0\ARM_GCC_493\Debug\Slider_TunerHelper.o .\CortexM0\ARM_GCC_493\Debug\Slider_SMS.o .\CortexM0\ARM_GCC_493\Debug\BLE_bless_isr.o .\CortexM0\ARM_GCC_493\Debug\Slider_SampleClk.o .\CortexM0\ARM_GCC_493\Debug\Slider_SenseClk.o
arm-none-eabi-ar.exe: creating .\CortexM0\ARM_GCC_493\Debug\CapSenseRGB.a
arm-none-eabi-gcc.exe -Wl,--start-group -o .\CortexM0\ARM_GCC_493\Debug\CapSenseRGB.elf .\CortexM0\ARM_GCC_493\Debug\main.o .\CortexM0\ARM_GCC_493\Debug\cymetadata.o .\CortexM0\ARM_GCC_493\Debug\Cm0Start.o .\CortexM0\ARM_GCC_493\Debug\CapSenseRGB.a "C:\Program Files (x86)\Cypress\PSoC Creator\3.3\PSoC Creator\psoc\content\cycomponentlibrary\CyComponentLibrary.cylib\BLE_v2_10\Library\gccCyBLEStack_BLE_SOC_PERIPHERAL.a" "C:\Program Files (x86)\Cypress\PSoC Creator\3.3\PSoC Creator\psoc\content\cycomponentlibrary\CyComponentLibrary.cylib\CapSense_CSD_P4_v2_20\PSoC4\Library\CapsenseP4Library_GCC.a" "C:\Program Files (x86)\Cypress\PSoC Creator\3.3\PSoC Creator\psoc\content\cycomponentlibrary\CyComponentLibrary.cylib\CortexM0\ARM_GCC_493\Debug\CyComponentLibrary.a" -mcpu=cortex-m0 -mthumb -g -ffunction-sections -Og -L Generated_Source\PSoC4 -Wl,-Map,.\CortexM0\ARM_GCC_493\Debug/CapSenseRGB.map -T Generated_Source\PSoC4\cm0gcc.ld -specs=nano.specs -Wl,--gc-sections -Wl,--end-group
cyelftool.exe -C "C:\Users\Electronic\Documents\GitHub\PSoC-4-BLE-Experiments\Project 003 Custom Profile CapSense RGB LED\PSoC\CapSenseRGB\CapSenseRGB.cydsn\CortexM0\ARM_GCC_493\Debug\CapSenseRGB.elf" --flash_row_size 128 --flash_size 131072
cyelftool.exe -S "C:\Users\Electronic\Documents\GitHub\PSoC-4-BLE-Experiments\Project 003 Custom Profile CapSense RGB LED\PSoC\CapSenseRGB\CapSenseRGB.cydsn\CortexM0\ARM_GCC_493\Debug\CapSenseRGB.elf"
Flash used: 74752 of 131072 bytes (57.0 %).
SRAM used: 10100 of 16384 bytes (61.6 %). Stack: 2048 bytes. Heap: 128 bytes.
--------------- Build Succeeded: 09/23/2015 14:00:08 ---------------
>>>>>>> origin/master
